--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vitest": "^1.6.1"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
