--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
     "test": "vitest run --coverage",
     "test:watch": "vitest"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-gradient-animation": "^1.0.7",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
@@ -23,9 +27,12 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^1.4.0",
     "@vitest/ui": "^1.4.0",
+    "autoprefixer": "^10.4.21",
     "happy-dom": "^13.9.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vitest": "^1.4.0"
   }
-} 
+}
