--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:e2e": "cd e2e && npm test"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -40,7 +41,7 @@
     "happy-dom": "^17.4.4",
     "postcss": "^8.5.3",
     "supertest": "^7.1.0",
-    "tailwindcss": "^4.1.3",
+    "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
