--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/firebase": "^2.4.32",
+    "axios": "^1.8.4",
+    "firebase": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gradient-animation": "^1.0.7",
