--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,18 @@
     "test": "vitest run --coverage",
     "test:watch": "vitest"
   },
+  "dependencies": {
+    "@notionhq/client": "^2.3.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.1",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.9",
+    "npm": "^11.3.0"
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.27.0",
@@ -17,4 +29,4 @@
     "vite": "^6.2.0",
     "vitest": "^1.4.0"
   }
-} 
+}
