--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gradient-animation": "^1.0.7",
-    "react-router-dom": "^6.22.3"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.2",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
