--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "concurrently": "^8.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "concurrently": "^8.2.2"
+    "react-virtuoso": "^4.12.6",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
