--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,27 @@ backend/coverage
 e2e/coverage
 .env
 backend/serviceAccountKey.json
+
+# Firebase cache and config
+.firebase/
+firebase-debug.log*
+.firebaserc
+ui-debug.log*
+database-debug.log*
+
+# TypeScript
+*.tsbuildinfo
+.tscache/
+
+# Test related
+.nyc_output/
+.jest/
+
+# Environment
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Vite
+.vite/
