--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,15 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.9",
-    "npm": "^11.3.0"
+    "npm": "^11.3.0",
+    "ts-jest": "^29.3.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.27.0",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^1.4.0",
+    "jest": "^29.7.0",
     "supertest": "^7.1.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
