--- a/backend/package.json
+++ b/backend/package.json
@@ -11,32 +11,27 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-<<<<<<< HEAD
     "@notionhq/client": "^2.3.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
+    "axios": "^1.9.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "nodemon": "^3.1.9",
-    "npm": "^11.3.0",
-    "ts-jest": "^29.3.2"
-=======
-    "axios": "^1.8.4",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
     "express-openapi-validator": "^5.4.9",
-    "firebase": "^9.23.0",
-    "firebase-admin": "^11.11.1",
+    "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
     "google-auth-library": "^8.7.0",
     "js-yaml": "^4.1.0",
+    "nodemon": "^3.1.9",
+    "npm": "^11.3.0",
+    "path": "^0.12.7",
     "swagger-ui-express": "^5.0.1",
+    "ts-jest": "^29.3.2",
+    "yaml": "^2.7.1",
     "yamljs": "^0.3.0"
->>>>>>> bee24cc836ca1decfe98aeac7d8e22eac326cb27
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
@@ -49,17 +44,12 @@
     "@types/node": "^20.17.30",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
-    "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/coverage-v8": "^3.1.2",
     "jest": "^29.7.0",
-<<<<<<< HEAD
-=======
     "nodemon": "^3.1.9",
->>>>>>> bee24cc836ca1decfe98aeac7d8e22eac326cb27
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
-    "typescript": "~5.7.2",
-    "vite": "^6.2.0",
-    "vitest": "^1.4.0"
+    "typescript": "~5.7.2"
   }
 }
