--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/firebase": "^2.4.32",
     "axios": "^1.8.4",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gradient-animation": "^1.0.7",
