added content to carousel cards

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "cd frontend && npm run build",
+    "build:frontend": "cd frontend && npm run build",
+    "deploy": "npm run build:frontend && firebase deploy",
+    "deploy:hosting": "npm run build:frontend && firebase deploy --only hosting",
     "lint": "eslint .",
     "preview": "vite preview",
     "test:frontend": "cd frontend && npm test",
