netlify backend serverless deployment
fully implemented functions:
- /auth/login
- /auth/signup
- /auth/user
- /notion/disconnect

functions to be implemented:
- /auth/forgot-password
- /notion/connected
- /notion/token
- /notion/compare
- /notion/pages
- /notion/sync

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@netlify/functions": "^2.4.1",
     "axios": "^1.8.4",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
