--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "google-auth-library": "^9.15.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-virtuoso": "^4.12.6",
