production implementation /google and /delete

--- a/backend/netlify.toml
+++ b/backend/netlify.toml
@@ -13,6 +13,16 @@
   status = 200
 
 [[redirects]]
+  from = "/auth/*"
+  to = "/.netlify/functions/auth/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/test"
+  to = "/.netlify/functions/test"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
