--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@netlify/functions": "^2.4.1",
     "axios": "^1.8.4",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
@@ -22,12 +23,14 @@
     "google-auth-library": "^8.7.0",
     "js-yaml": "^4.1.0",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.27.0",
     "@types/body-parser": "^1.19.5",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.1",
@@ -36,6 +39,7 @@
     "@types/node": "^20.17.30",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "@vitest/coverage-v8": "^1.4.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
