--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@types/axios": "^0.9.36",
     "@types/firebase": "^2.4.32",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.8.4",
     "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gradient-animation": "^1.0.7",
