--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,13 +5,18 @@
   "type": "module",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.27.0",
+    "@types/puppeteer": "^7.0.4",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.1.2",
+    "@vitest/ui": "^3.1.2",
+    "puppeteer": "^22.6.0",
     "supertest": "^7.1.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
